# serverless-compose-and-docker

./: .gitignore  README.md  package-lock.json  pyproject.toml  serverless-compose.yml
.github/workflows/: main.yml
docker/: Dockerfile
src/: main.py  serverless-compose.yml
src/docker/: Dockerfile
src/service01/: serverless.yml  service.py
src/service02/: serverless.yml  service.py
src/tools/: __init__.py  side_tool.py
